# rust-theft-auto

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
data/: shader.frag  shader.vert
src/: camera.rs  camera_controller.rs  chunk.rs  main.rs  tile_set.rs
src/gfx/: mod.rs  shader.rs  shader_program.rs  vertex_array.rs  vertex_buffer.rs
src/map/: block.rs  block_data.rs  location.rs  mod.rs  object.rs  position.rs  route.rs  zone.rs
src/renderer/: buffer.rs  mod.rs  program.rs
src/style/: animation.rs  car_info.rs  hls_info.rs  mod.rs  object_info.rs  palette_index.rs  sprite_info.rs  sprite_numbers.rs
