[package]

name = "gta"
version = "0.0.1"
authors = ["Eeli <eeli@fea.st>"]

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"
[dependencies.sdl2_game_window]
git = "https://github.com/PistonDevelopers/sdl2_game_window"
[dependencies.gfx]
git = "http://github.com/gfx-rs/gfx-rs"